# mcp-server

./: .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  server.json
.github/workflows/: release.yml  spec-check.yml
docker/: Dockerfile
docs/openapi/: monitoring-api.json
scripts/: regen-from.sh
src/devhelm_mcp/: __init__.py  client.py  server.py
src/devhelm_mcp/tools/: alert_channels.py  api_keys.py  dependencies.py  deploy_lock.py  environments.py  forensics.py  incidents.py  maintenance_windows.py  monitors.py  notification_policies.py  resource_groups.py  secrets.py  services.py  status.py  status_pages.py  tags.py  webhooks.py
tests/: run_mcp.py  test_auth.py  test_cli.py  test_client.py  test_devex_round3_fixes.py  test_maintenance_windows.py  test_negative_validation.py  test_services.py  test_tools.py  test_typed_schemas.py
